--- a/login.html
+++ b/login.html
@@ -25,9 +25,9 @@
             <div class="row py-5 mt-4 align-items-center">
                 <!-- For Demo Purpose -->
                 <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
-                    <img src="https://cloudinary-marketing-res.cloudinary.com/image/upload/f_auto,q_auto/v1667313676/website_2021/Guess_iPhone2" style="height: 400px; padding-left: 55px;" class="img-fluid mb-3 d-none d-md-block">
-                    <h4>Welcome To CommuniCircle.</h4>
-                    <p class="font-italic text-muted mb-0">Connect with friends and the world around you on Communicircle.</p>
+                    <img src="imgs/CpcLogo.png" style="height: 350px;" class="img-fluid mb-3 d-none d-md-block">
+                    <h4>Welcome To Campus Communication.</h4>
+                    <p class="font-italic text-muted mb-0">Connect with Teachers and Students on CampusComm.</p>
                 </div>
 
 
