--- a/newsfeed.html
+++ b/newsfeed.html
@@ -12,7 +12,7 @@
     
     <nav>
         <div class="nav-left">
-            <!-- <img src="imgs/cc.png" class="logo"> --> <h1>.CC</h1>
+            <img src="imgs/CpcLogo.png" class="logo">
             <ul>
                 <li><img src="imgs/notification.png" alt=""></li>
                 <li><img src="imgs/inbox.png" alt=""></li>
@@ -20,10 +20,16 @@
             </ul>
         </div>
         <div class="nav-right">
-
-            <div class="search-box">
-                <img src="imgs/search.png">
-                <input type="text" name="" id="" placeholder="Search">
+            <div class="category">
+                <label for="category">DEPARTMENT</label>
+                <select name="category" id="category">
+                    <option value="">DEPARMENT</option>
+                    <option value="bsit">BSIT</option>
+                    <option value="bsit">BEED</option>
+                    <option value="bsit">BSHM</option>
+                    <hr>
+                    <option value="events">EVENTS</option>
+                </select>
             </div>
             <div class="nav-user-icon online">
                 <img src="imgs/profile-pic.png">
