--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from gambolthemes.net/workwise-new/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Feb 2023 14:07:28 GMT -->
+
 <head>
 <meta charset="UTF-8">
-<title>WorkWise Html Template</title>
+<title>CampusComm.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="" />
 <meta name="keywords" content="" />
