--- a/sign-in.html
+++ b/sign-in.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from gambolthemes.net/workwise-new/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Feb 2023 14:06:02 GMT -->
 <head>
 <meta charset="UTF-8">
-<title>WorkWise Html Template</title>
+<title>CampusComm.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="" />
 <meta name="keywords" content="" />
@@ -30,7 +30,7 @@
 <div class="cmp-info">
 <div class="cm-logo">
 <img src="images/cm-logo.png" alt="">
-<p>Workwise, is a global freelancing platform and social networking where businesses and independent professionals connect and collaborate remotely</p>
+<p>Connect Theachers and student and the whole Cpc'nians through CampusComm.</p>
 </div>
 <img src="images/cm-main-img.png" alt="">
 </div>
